# agent-mcp-examples

./: .gitignore  LICENSE  README.md  llms.txt  test_tools.py
python/langgraph/auto-discovery-url-to-markdown/: README.md  agent.py  pyproject.toml
python/langgraph/chained-json-jq-filter/: README.md  agent.py  pyproject.toml
python/langgraph/persistent-knowledge-memory/: README.md  agent.py
python/langgraph/stateful-cloud-memory/: README.md  agent.py  pyproject.toml
python/langgraph/svg-manufacturing-loop/: README.md  agent.py  pyproject.toml
python/langgraph/zero-bloat-jq-filter/: README.md  agent.py  main.py
python/smolagents/auto-discovery-url-to-markdown/: README.md  main.py
python/smolagents/chained-json-jq-filter/: README.md  main.py
python/smolagents/persistent-knowledge-memory/: README.md  main.py  pyproject.toml
python/smolagents/stateful-cloud-memory/: README.md  main.py  pyproject.toml
python/smolagents/svg-manufacturing-loop/: .env.example  README.md  main.py  pyproject.toml
python/smolagents/zero-bloat-jq-filter/: README.md  main.py  pyproject.toml
rust/rig/auto-discovery-url-to-markdown/: Cargo.toml  README.md  test_fmt.rs  test_rmcp.rs
rust/rig/auto-discovery-url-to-markdown/src/: logging.rs  main.rs
rust/rig/chained-json-jq-filter/: Cargo.toml  README.md
rust/rig/chained-json-jq-filter/src/: main.rs
rust/rig/persistent-knowledge-memory/: .env.example  Cargo.toml  README.md
rust/rig/persistent-knowledge-memory/src/: main.rs
rust/rig/stateful-cloud-memory/: Cargo.toml  README.md
rust/rig/stateful-cloud-memory/src/: main.rs
rust/rig/zero-bloat-jq-filter/: Cargo.toml  README.md  scratch.rs  scratch2.rs
rust/rig/zero-bloat-jq-filter/src/: main.rs
typescript/vercel-ai-sdk/auto-discovery-url-to-markdown/: README.md  check.ts  index.ts  package-lock.json  package.json  test_fetch_full.ts  test_filter.ts  test_tool.ts  tsconfig2.json  tsconfig3.json
typescript/vercel-ai-sdk/chained-json-jq-filter/: README.md  index.ts  package-lock.json  package.json  test_fetch.ts  test_schema.ts  tsconfig.json
typescript/vercel-ai-sdk/persistent-knowledge-memory/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
typescript/vercel-ai-sdk/stateful-cloud-memory/: README.md  index.ts  package-lock.json  package.json
typescript/vercel-ai-sdk/svg-manufacturing-loop/: .env.example  README.md  index.ts  package-lock.json  package.json  tsconfig.json
typescript/vercel-ai-sdk/zero-bloat-jq-filter/: README.md  index.ts  package-lock.json  package.json  test_tools.ts
