[package]
name = "persistent-knowledge-memory-example"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
rig-core = { version = "0.35.0", features = ["rmcp"] }
dotenv = "0.15.0"
rmcp = { version = "1.5.0", features = ["client", "macros", "client-side-sse", "reqwest", "transport-streamable-http-client-reqwest"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
